--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -3,13 +3,11 @@
 
     <string name="app_name">LocationShare</string>
     <string name="app_title">Location Share</string>
-    
     <string name="settings">Settings</string>
     <string name="my_location">My location</string>
     <string name="my_friends">My friends</string>
     <string name="layers">Layers</string>
     <string name="save_track">Save gpx track</string>
-    
     <string name="maps">Maps</string>
     <string name="use_online_maps">Use online maps</string>
     <string name="tile_source">Tile source</string>
@@ -22,20 +20,10 @@
         <item>Freemap Slovakia Hiking</item>
         <item>Freemap Slovakia Cycle Map</item>
         <item>Freemap Slovakia Car Atlas</item>
+        <item>Map1.eu</item>
         <item>OpenStreetMap Mapnik</item>
         <item>OpenStreetMap MapQuest</item>
         <item>OpenStreetMap Cycle Map</item>
-    </string-array>
-
-    <string name="freemap_hiking">FreemapSlovakiaHiking</string>
-
-    <string-array name="tile_sources_values">
-        <item>@string/freemap_hiking</item>
-        <item>FreemapSlovakiaCycleMap</item>
-        <item>FreemapSlovakiaCarAtlas</item>
-        <item>OpenStreetMapMapnik</item>
-        <item>OpenStreetMapMapQuest</item>
-        <item>OpenStreetMapCycleMap</item>
     </string-array>
 
 </resources>
