--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -4,18 +4,26 @@
     <string name="app_name">LocationShare</string>
     <string name="app_title">Location Share</string>
     <string name="settings">Settings</string>
+    <string name="exit">Exit</string>
     <string name="my_location">My location</string>
     <string name="my_friends">My friends</string>
     <string name="layers">Layers</string>
     <string name="save_track">Save gpx track</string>
+    
     <string name="maps">Maps</string>
     <string name="use_online_maps">Use online maps</string>
     <string name="tile_source">Tile source</string>
     <string name="choose_tile_source">Choose tile source</string>
     <string name="location_share">Location share</string>
+    <string name="location_providers">Location providers</string>
+    <string name="network_provider">Network provider</string>
+    <string name="gps_provider">GPS provider</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-
+    <string name="livetracking_enable">Enable live tracking</string>
+    <string name="livetracking_url">URL for live tracking</string>
+    <string name="livetracking_url_summary">URL of remote live tracker with available parameters: {nick}, {lat}, {lon}, {alt}, {speed}, {time}.</string>
+    
     <string-array name="tile_sources">
         <item>Freemap Slovakia Hiking</item>
         <item>Freemap Slovakia Cycle Map</item>
@@ -26,4 +34,11 @@
         <item>OpenStreetMap Cycle Map</item>
     </string-array>
 
+    <string name="service_started">Location Share background service is running.</string>
+    <string name="service_stopped">Location Share background service has stopped.</string>
+    <string name="location_service_label">Location Share</string>
+    <string name="out_of_service">out of service</string>
+    <string name="temporarily_unavailable">temporarily unavailable</string>
+
+    
 </resources>
